--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,143 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BikerZone DaisyUI</title>
     <link rel="stylesheet" href="output.css">
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
-<body>
-    <div class="text-5xl">Hello world</div>
-    <div class="btn btn-primary">Click</div>
+<body class="font-poppins">
+          <!-- header section -->
+    <header class="container mx-auto">
+      <div class="navbar bg-base-100 mb-4">
+        <div class="flex-1">
+          <div class="dropdown">
+            <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-5 w-5"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M4 6h16M4 12h8m-8 6h16" />
+              </svg>
+            </div>
+            <ul
+              tabindex="0"
+              class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+              <li><a class="capitalize">home</a></li>
+              <li><a class="capitalize">shop</a></li>
+              <li><a class="capitalize">news</a></li>
+              <li><a class="capitalize">contact</a></li>
+            </ul>
+          </div>
+          <a class="text-xl md:text-3xl capitalize font-bold">go ride</a>
+        </div>
+        <div class=" hidden lg:flex">
+          <ul class="menu menu-horizontal px-1">
+            <li><a>Home</a></li>
+            <li><a>Shop</a></li>
+            <li><a>News</a></li>
+            <li><a>Contact</a></li>
+          </ul>
+        </div>
+        <div class="">
+          <a class="btn capitalize bg-[#E76F51] rounded-md text-white px-8">login</a>
+        </div>
+      </div>
+
+      <!-- carousal section -->
+      <div class="carousel w-full bg-[#fdf1ed] md:h-[550px]">
+        <div id="slide1" class="carousel-item relative w-full">
+          <div class="md:flex p-10 md:p-24">
+            <!-- text-section -->
+            <div class="md:flex-1 space-y-7">
+              <h2 class="text-5xl md:text-7xl font-extrabold">
+                Ride-on R15 v4 with smile
+              </h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi aliquid minus eligendi, et nemo ad veritatis iure aperiam suscipit nihil?
+              </p>
+              <button class="btn capitalize bg-[#E76F51] rounded-md text-white px-8">
+                  Purchase
+              </button>
+            </div>
+            <!-- image section -->
+            <div class="flex-1">
+              <img class="md:w-[480px]" src="images/slider/bike1.png" alt="slider bike image">
+            </div>
+          </div>
+          <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+            <a href="#slide3" class="btn btn-circle">❮</a>
+            <a href="#slide2" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+
+        <div id="slide2" class="carousel-item relative w-full">
+          <div class="md:flex p-10 md:p-24">
+            <!-- text-section -->
+            <div class="md:flex-1 space-y-7">
+              <h2 class="text-5xl md:text-7xl font-extrabold">
+                Ride-on R15 v4 with smile
+              </h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi aliquid minus eligendi, et nemo ad veritatis iure aperiam suscipit nihil?
+              </p>
+              <button class="btn capitalize bg-[#E76F51] rounded-md text-white px-8">
+                  Purchase
+              </button>
+            </div>
+            <!-- image section -->
+            <div class="flex-1">
+              <img class="md:w-[480px]" src="images/slider/bike2.png" alt="slider bike image">
+            </div>
+          </div>
+          <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+            <a href="#slide1" class="btn btn-circle">❮</a>
+            <a href="#slide3" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+
+        <div id="slide3" class="carousel-item relative w-full">
+          <div class="md:flex p-10 md:p-24">
+            <!-- text-section -->
+            <div class="md:flex-1 space-y-7">
+              <h2 class="text-5xl md:text-7xl font-extrabold">
+                Ride-on R15 v4 with smile
+              </h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi aliquid minus eligendi, et nemo ad veritatis iure aperiam suscipit nihil?
+              </p>
+              <button class="btn capitalize bg-[#E76F51] rounded-md text-white px-8">
+                  Purchase
+              </button>
+            </div>
+            <!-- image section -->
+            <div class="flex-1">
+              <img class="md:w-[480px]" src="images/slider/bike3.png" alt="slider bike image">
+            </div>
+          </div>
+          <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+            <a href="#slide2" class="btn btn-circle">❮</a>
+            <a href="#slide1" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+      </div>
+  </header>
+
+  <!-- main section -->
+  <main class="container mx-auto">
+
+  </main>
+  
+  <!-- footer section -->
+  <footer>
+
+  </footer>
+
 </body>
 </html>
