--- a/src/index.html
+++ b/src/index.html
@@ -353,7 +353,7 @@
               </div>
 
               <!-- questions -->
-              <div class=" pl-12">
+              <div class=" md:pl-12">
                 <!-- question-1 -->
                 <div class="collapse collapse-arrow bg-white border-2 mb-4">
                   <input type="radio" name="my-accordion-2" checked="checked" />
@@ -413,8 +413,39 @@
   </main>
   
   <!-- footer section -->
-  <footer>
-
+  <footer class="footer bg-black text-neutral-content p-10">
+      <div class="container mx-auto">
+          <div class="md:flex justify-between w-full">
+            <div class="md:w-1/2">
+              <div class="flex mb-6">
+                <p>Download Now<p>
+                  <p>license</p>
+              </div>
+              <ul class="flex flex-wrap gap-4 mb-10">
+                <li><a href="">about</a></li>
+                <li><a href="">features</a></li>
+                <li><a href="">pricing</a></li>
+                <li><a href="">career</a></li>
+                <li><a href="">help</a></li>
+                <li><a href="">privacy policy</a></li>
+              </ul>
+              <p class="hidden md:block">© 2020 bike. All rights reserved</p>
+            </div>
+      
+          <nav class="mb-8">
+            <h6 class="text-xl text-white mb-6">Get the App</h6>
+            <div>
+              <a>
+                <img class="mb-6" src="images/others/ios.png" alt="apple store">
+              </a>
+              <a>
+                <img src="images/others/android.png" alt="play store">
+              </a>
+            </div>
+          </nav>
+          </div>
+          <p class="md:hidden">© 2020 bike. All rights reserved</p>
+      </div>
   </footer>
 
 </body>
